Code cleanup, resolve warnings